--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
   "bugs": {
     "url": "https://github.com/RevelerMediaServices/revelermediaservices/issues"
   },
-  "homepage": "https://github.com/RevelerMediaServices/revelermediaservices#readme",
+  "homepage": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "gravatar": "^1.6.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.12",
     "nodemon": "^1.18.6",
